--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#2e9ffe",
     "navigationBarTitleText": "直播吧",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"white"
   }
 }
